# ev_bot

./: .env.template  .gitignore  Dockerfile  README.md  channels.example.json  docker-compose.yaml  docker-entrypoint.sh  pytest.ini  rebuild
.github/workflows/: deploy.yml
EV_BOT/: ai_agent.py  amadeus_client.py  pyproject.toml  settings.py  telegram_sender.py
debug_samples/: inspiration_API_sample.json
ev_bot/: README.md  README_MULTI_CHANNEL.md  __init__.py  agent_orchestration.py  ai_agent.py  amadeus_client.py  channels.example.json  flight_agent.py  hotel_agent.py  logger.py  pyproject.toml  run_multi_channel.py  settings.py  shared_tools.py  telegram_sender.py  temp_test.py
ev_bot/travelpayouts/: client.py  v3.py
tests/: conftest.py  test_ai_agent.py  test_amadeus_client.py  test_telegram_sender.py
