[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ev-bot"
version = "0.1.0"
description = "Amadeus API Python Client"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "tenacity==8.2.3",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "pydantic-ai==0.1.0",
    "aiogram==3.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==24.1.1",
    "isort==5.13.2",
    "mypy==1.8.0",
    "ruff==0.2.1"
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.uv]
python = "3.8" 