[project]
name = "ev_bot"
version = "0.1.0"
description = "AI-powered travel inspiration bot"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.4.1",
    "python-dotenv>=1.0.1",
    "openai>=1.12.0",
    "pydantic-ai>=0.1.0",
    "aiogram>=3.3.0",
    "amadeus>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ev_bot --cov-report=term-missing"
